# sticker-sales-forecasting

./: .gitignore  Dockerfile  README.md  lambda_function.py  notebook.ipynb  predict-test.py  predict.py  pyproject.toml  requirements.txt  test_lambda.py  train.py
