[tool.poetry]
name = "sticker-sales-forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
